--- a/Milestone_CST350/Views/Home/Register.cshtml
+++ b/Milestone_CST350/Views/Home/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Milestone_CST350.Models.User
 
-<h4>User</h4>
+<h4>User Registration</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -54,6 +54,6 @@
 </div>
 
 <div>
-    <a asp-controller="User" asp-action="Index">Login</a>
+    <a asp-controller="Home" asp-action="Index">Login</a>
 </div>
 
